<resources>
    <string name="app_name">WoMarketing</string>
    <string name="input_username">请输入用户名或手机号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login_text">登录</string>
    <string name="login_forget">忘记密码</string>
    <string name="home_nav_index">首页</string>
    <string name="home_nav_found">任务</string>
    <string name="home_nav_message">通话记录</string>
    <string name="home_nav_me">我的</string>
    <string name="common_code_input_hint">输入验证码</string>
    <string name="common_code_send">发送验证码</string>
    <string name="common_code_send_hint">验证码已发送，请注意查收</string>


    <string name="task_type2">2</string>
    <!-- 拨打界面 -->
    <string name="dial_name">拨打电话</string>
    <string name="dial_default_number">10010</string>
    <string name="dial_title">拨打电话</string>
    <string name="dial_cust_info_btn">用户画像</string>
    <string name="dial_voice_content_btn">话术</string>
    <string name="dial_cust_info_content">你好，我们是中国联通</string>
    <string name="dial_pro_recommend">推荐产品</string>
    <string name="dial_pro_recommend_detail">冰激凌</string>
    <string name="dial_pro_intention">订购意向</string>
    <string name="dial_choose">请选择</string>
    <string name="dial_remask">备&#8195;&#8195;注</string>
    <string name="dial_dial">打电话</string>
    <string name="dial_sms">发短信</string>
    <string name="dial_complete">完成</string>

    <!-- 通话详情 -->
    <string name="detail_name">记录详情</string>
    <string name="num_name">用户号码：</string>
    <string name="task_name">任务名：</string>
    <string name="startime">通话开始时间：</string>
    <string name="endtime">通话结束时间：</string>
    <string name="result">沟通结果：</string>
    <string name="remark">备注：</string>


    <!-- 任务分类 -->
    <string name="task_type_4g">4G套餐</string>
    <string name="task_type_flow">流量包</string>
    <string name="task_type_broad">宽带套餐</string>
    <string name="task_type_mix">融合套餐</string>


    <!-- 我的页面 -->
    <string name="my_update_pwd">修改密码</string>
    <string name="my_about">关于</string>
    <string name="my_exit">退出登录</string>
    <string name="my_help">帮助</string>
    <string name="my_exit_confirm">是否退出登录？</string>
    <string name="my_cancel">取消</string>
    <string name="my_confirm">确定</string>
    <string name="my_old_pwd">请输入原始密码</string>
    <string name="my_old_pwd_confirm">请再输入一遍新密码</string>
    <string name="my_work_report">考评报告</string>
    <string name="my_down_report">是否下载</string>


</resources>
