<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.chinaunicom.marketing.ui.activity.DialActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/dial_title" />

    <TextView
        android:id="@+id/serial_number"
        style="@style/CountdownViewStyle"
        android:layout_width="273dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="11111111111"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dial_cust_info_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"

            android:text="@string/dial_cust_info_btn"
            android:textSize="18sp" />

        <Button
            android:id="@+id/dial_voice_content_btn"
            style="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:text="@string/dial_voice_content_btn"
            android:textSize="18sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/cust_info_detail"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="10dp"
        android:text="这是用户画像这是用户画像这是用户画像这是用户画像这是用户画像这是用户画像这是用户画像这是用户画像这是用户画像"
        android:textSize="18sp" />

    <!-- 产品推荐 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#FFFFFFFF"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp">

        <TextView

            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/dial_pro_recommend"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dial_pro_recommend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/dial_pro_recommend_detail"
            android:textColor="#99000000"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="bottom"
        android:background="#ececec" />

    <!-- 订购意向 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#FFFFFFFF"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/dial_pro_intention"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/dial_pro_intention"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ico_go_black"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:text="@string/dial_choose"
            android:textColor="#99000000"
            android:textSize="14sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_gravity="bottom"
        android:background="#ececec" />


    <!-- 备注 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#FFFFFFFF"
        android:gravity="start|center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="71dp"
            android:layout_height="match_parent"
            android:gravity="start|center_vertical"
            android:text="@string/dial_remask"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/dial_remark_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingLeft="10dp"
            android:textColor="#99000000"
            android:textSize="14sp"
           />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dial_dial"
            style="@style/CountdownButtonViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/dial_dial"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dial_sms"
            style="@style/CountdownViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/dial_sms"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dial_complete"
            style="@style/CountdownViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:text="@string/dial_complete"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>