<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageFourg"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/bg_boarder"
            app:srcCompat="@drawable/fourg" />

        <ImageView
            android:id="@+id/imageFlow"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="130dp"
            android:background="@drawable/bg_boarder"
            app:srcCompat="@drawable/flow" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/task_type_4g"
            android:textColor="@color/white80"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/taskType"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/task_type_flow"
            android:textColor="@color/white80"
            android:textSize="19sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageWideband"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_boarder"
            app:srcCompat="@drawable/wideband" />

        <ImageView
            android:id="@+id/imageMix"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_boarder"
            app:srcCompat="@drawable/mix" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/taskStatus"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginLeft="30dp"
            android:gravity="center"
            android:text="@string/task_type_broad"
            android:textColor="@color/white80"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/productId"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/task_type_mix"
            android:textColor="@color/white80"
            android:textSize="19sp" />
    </LinearLayout>
</LinearLayout>
