<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">


    <FrameLayout
        android:id="@+id/fl_person_data_head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FF5722"
        android:paddingStart="20dp"
        android:paddingTop="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/person_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text=""
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="110dp"
            android:layout_height="80dp"
            android:layout_gravity="end|center_vertical"
            android:src="@mipmap/logo" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/fl_person_data_changepwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/changepwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/my_update_pwd"
            />

        <ImageView
            android:id="@+id/rightpoint_1"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="end|center_vertical"
            android:src="@mipmap/rightpoint" />
    </FrameLayout>





    <FrameLayout
        android:id="@+id/fl_person_data_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/my_help"
            />

        <ImageView
            android:id="@+id/rightpoint_2"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="end|center_vertical"
            android:src="@mipmap/rightpoint" />
    </FrameLayout>


    <FrameLayout
        android:id="@+id/fl_person_data_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/my_about"
            />

        <ImageView
            android:id="@+id/rightpoint_3"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="end|center_vertical"
            android:src="@mipmap/rightpoint" />
    </FrameLayout>



    <FrameLayout
        android:id="@+id/fl_person_data_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector"
        android:clickable="true"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingBottom="15dp">

        <TextView
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_vertical"
            android:text="@string/my_exit"
            />

    </FrameLayout>


</LinearLayout>